# watah

./: .gitignore  PHASE1_COMPLETE.md  test_daemon_integration.py  test_encoding.py  test_encoding_fix.py  test_final_verification.py  test_standalone_encoding.py
activity_simulator/: .gitignore  LICENSE  QUICKSTART.md  config.example.yaml  config.vm.yaml  install.bat  setup.py  setup_windows.bat  stealth_runner.py  test_encoding_windows.bat  view_logs.bat
activity_simulator/activity_simulator/: activities.py  code_snippets.py  config.py  daemon.py  monitoring.py  timing.py  win32_input.py
activity_simulator/tests/: test_config.py  test_timing.py
azure_monitor/: azure_setup.py  config.yaml  start_azure.bat  stop_azure.bat
click/: README.md  start_azure.bat
gcp_active_monitor/: gcp_monitor.bat  gcp_monitoring.py  stop_gcp.bat
gcp_active_monitor/gcp_utils/: activities.py
gcp_simulator/: .gitignore  INSTALL.md  README.md  README_STEALTH.md  config.vm.yaml  gcp_monitor.bat  gcp_monitoring.py  pyproject.toml  requirements.txt  setup.py  start_gcp_legacy.bat  status.bat  status_hidden.bat  stealth_runner.py  stop_gcp.bat  stop_hidden.bat
gcp_simulator/activity_simulator/: activities.py  cli.py  code_snippets.py  daemon.py
gcp_simulator/gcp_utils/: __init__.py  timing.py
openspec/changes/add-human-activity-simulator/: design.md  proposal.md  tasks.md
openspec/changes/add-human-activity-simulator/specs/activity-simulator/: spec.md
openspec/changes/enhance-realistic-developer-behavior/: design.md  proposal.md  tasks.md
(+1 files in other folders)
